some javadoc implementation
Signed-off-by: Jai <Jai_hunt@outlook.com>