@@ -9,31 +9,30 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 
+
 /**
  *
  * @authors Group_010 - Daniel Baharvand, James Dick, Jai Hunt, Jovi Lee
- * @version 3.0
+ * @version 4.0
  */
 public class Gui extends JFrame implements ActionListener, Runnable {
-
-    private Dimension screenSize = Toolkit.getDefaultToolkit().getScreenSize();
+    private Dimension screenSize = Toolkit.getDefaultToolkit().getScreenSize(); //Stores users screen resolution size in a variable
     private double WIDTH = screenSize.getWidth();
     private double HEIGHT = screenSize.getHeight();
-    private JButton polEndButton;
-    private JButton gridBtn;
-    private JButton enterBtn;
     private JInternalFrame shapesWindow;
     private JInternalFrame colorWindow;
-    private JInternalFrame historyWindow;
+    private JInternalFrame historyWindow; //MIGHT DELETE DEPENDING ON IMPLEMENTATION
     private JInternalFrame utilWindow;
     private JColorChooser colors;
-    private Type selectBtn;
+    private Type selectBtn; //Variable to store selected shape
 
-    static String tempVEC = "";
-    protected static JPanel canvas;
-    static final int canvSize = 1000;
-    enum Type {PLOT, LINE, RECTANGLE, ELLIPSE, POLYGON, ZOOM, GRID}
-    static Graphics canvasG;
+    private JButton polEndButton; //Button that finishes drawing the polygon
+    private JButton enterBtn; //Button for the popup grid window confirming the users input
+
+    static String tempVEC = ""; //This string is usd as cache, the VEC instructions are saved here
+    static JPanel canvas;
+    static final int canvSize = 1000; //canvas size can be changed from here
+    enum Type {PLOT, LINE, RECTANGLE, ELLIPSE, POLYGON}
 
     /**
      *
@@ -45,20 +44,29 @@ public class Gui extends JFrame implements ActionListener, Runnable {
         super(title);
     }
 
+    /**
+     * Creates the actual GUI and its parameters
+     */
     private void createGUI(){
-        double widthProp = 0.8;
-        double heightProp = 0.8;
-        setSize((int)(WIDTH * widthProp), (int)(HEIGHT * heightProp));
-        setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
-        setJMenuBar(createMenu());
-        getContentPane().add(display());
-        addComponentListener(new ResizeListener());
-        setVisible(true);
+        double widthProp = 0.8; //windows width compared to screen size
+        double heightProp = 0.8; //windows height compared to screen size
+        setSize((int)(WIDTH * widthProp), (int)(HEIGHT * heightProp)); //set window size
+        setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE); //exit gracefully
+        setJMenuBar(createMenu()); //creates the menuBar
+        getContentPane().add(display()); //add all contents (inside display) to frame
+        addComponentListener(new ResizeListener()); //add the resize listener to keep inner windows at correct location
+        setVisible(true); //make things visible
     }
 
+    /**
+     * Creates the background display of the window, separating the rest of the window from the drawing canvas.
+     *
+     * @return the background display.
+     */
     private JDesktopPane display(){
-        JDesktopPane bg = new JDesktopPane();
-        bg.setBackground(Color.BLACK);
+        JDesktopPane bg = new JDesktopPane();// get a new JDesktopPane
+        bg.setBackground(Color.BLACK);//set background color
+        //add contents
         bg.add(createColorWindow());
         bg.add(makeCanvas());
         bg.add(createShapes());
@@ -67,26 +75,34 @@ public class Gui extends JFrame implements ActionListener, Runnable {
         return bg;
     }
 
-
+    /**
+     * Creates the canvas on the window, the space in which shapes can be drawn on
+     *
+     * @return the canvas to be added to the display window.
+     */
     private JPanel makeCanvas(){
-        //Create a white canvas
-        canvas = new MyPanel();
-        canvas.setSize(canvSize, canvSize);
-        canvas.setLocation(150, 50);
-        canvas.setOpaque(true);
-        canvas.setBackground(Color.WHITE);
-        canvas.addMouseListener(new canvasAction());
+        canvas = new MyPanel(); // get a new instance of MyPanel
+        canvas.setSize(canvSize, canvSize); //set the canvas size (always a square)
+        canvas.setLocation(150, 50);//set location
+        canvas.setOpaque(true); //make the canvas opaque
+        canvas.setBackground(Color.WHITE); //set canvas color
+        canvas.addMouseListener(new canvasAction());// add a listener for mouse clicks on canvas
         return canvas;
     }
 
+    /**
+     * Creates the toolbar menu found on all standard applications. File, Save and Load features can be found tabbed
+     * at the top of the page.
+     *
+     * @return the toolbar to be added to the display window.
+     */
     private JMenuBar createMenu(){
-        //Menu Bar
-        JMenuBar bar = new JMenuBar();
-        //Menu
+        JMenuBar bar = new JMenuBar(); //get a Menu Bar
+        //Menu options
         JMenu file = new JMenu("File");
         JMenu edit = new JMenu("Edit");
         JMenu tools = new JMenu("Tools");
-        //Menu item
+        //Menu items
         JMenuItem save = new JMenuItem("Save");
         JMenuItem load = new JMenuItem("Load");
         JMenuItem exit = new JMenuItem("Exit");
@@ -108,6 +124,7 @@ public class Gui extends JFrame implements ActionListener, Runnable {
         tools.add(shapes);
         tools.add(toolColorChooser);
         tools.add(history);
+        //adding action listeners
         save.addActionListener((new saveAction()));
         load.addActionListener(new loadAction());
         undo.addActionListener(new undoAction());
@@ -118,11 +135,15 @@ public class Gui extends JFrame implements ActionListener, Runnable {
         return bar;
     }
 
+    /**
+     * Creates the frame displaying all the possible shapes/vectors the user can choose to input into the display canvas.
+     * Allowing for the selection of Plot, Line, Rectangle, Ellipses and Polygons to be drawn to the canvas.
+     *
+     * @return the shapes frame to be added to the side of the display window.
+     */
     private JInternalFrame createShapes(){
-        //Frame
-        shapesWindow = new JInternalFrame("Shapes");
-        //Panel
-        JPanel shapesPanel = new JPanel(new GridLayout(6, 1));
+        shapesWindow = new JInternalFrame("Shapes");//get a new internal frame
+        JPanel shapesPanel = new JPanel(new GridLayout(6, 1));//new shapes panel with grid layout
         //Buttons
         JButton plotButton = new JButton(new ImageIcon("plot.png") );
         JButton lineButton = new JButton(new ImageIcon(("line.png")) );
@@ -152,18 +173,40 @@ public class Gui extends JFrame implements ActionListener, Runnable {
         return shapesWindow;
     }
 
+    /**
+     * Creates the frame displaying all the possible colors the user can choose for the pen/fill
+     *
+     * @return the color frame to be added at the bottom of the display window.
+     */
     private JInternalFrame createColorWindow(){
-        colorWindow = new JInternalFrame("Color");
-        colors= new JColorChooser(Color.BLACK);
-        colors.setPreviewPanel(new JPanel());
+        colorWindow = new JInternalFrame("Color");// get a new internal frame
+        colorWindow.setLayout(new FlowLayout());//set to flow layout
+        //buttons
+        JButton penColorButton = new JButton("Set Pen Color");
+        JButton fillColorButton = new JButton("Set Fill Color");
+        JButton noFillColorButton = new JButton("No Fill");
+        penColorButton.addActionListener((new penColorAction()));
+        fillColorButton.addActionListener((new fillColorAction()));
+        noFillColorButton.addActionListener((new noFillColorAction()));
+        colors= new JColorChooser(Color.BLACK);// get a new color chooser
+        colors.setPreviewPanel(new JPanel());//get rid of the preview panel
         //Setting window parameters
-        colorWindow.setSize(600, 250);
+        colorWindow.setSize(600, 300);
         colorWindow.setVisible(true);
         //Adding to window
         colorWindow.add(colors);
+        colorWindow.add(penColorButton);
+        colorWindow.add(fillColorButton);
+        colorWindow.add(noFillColorButton);
         return colorWindow;
     }
 
+    //DELETE IF NOT IMPLEMENTED//
+    /**
+     * Creates a history frame that stores the users actions in a graphical display.
+     *
+     * @return returns history frame to be added at the top of the display window.
+     */
     private JInternalFrame createHistoryWindow() {
         //History
         String[] subject = {"shapesPanel.add(elButton)", " shapesPanel.add(recButto",
@@ -184,7 +227,13 @@ public class Gui extends JFrame implements ActionListener, Runnable {
         historyWindow.add(scrollWindow);
         return historyWindow;
     }
+    ////
 
+    /**
+     * Creates a frame displaying the utilities options: Zoom and Grid for the canvas.
+     *
+     * @return utilWindow to be added to the bottom of the display window.
+     */
     private JInternalFrame createUtilWin(){
         //Separate utilities window for zoom and grid features
         utilWindow = new JInternalFrame("Utilities");
@@ -192,7 +241,7 @@ public class Gui extends JFrame implements ActionListener, Runnable {
         JPanel utilPanel = new JPanel(new GridLayout(1, 2));
         //Buttons
         JButton zoomBtn = new JButton(new ImageIcon("magnifyingGlass.png"));
-        gridBtn = new JButton(new ImageIcon("grid.png"));
+        JButton gridBtn = new JButton(new ImageIcon("grid.png"));
         //Setting utils parameters in window
         utilWindow.setSize(100, 80);
         utilWindow.setLocation(0, 600);
@@ -241,59 +290,72 @@ public class Gui extends JFrame implements ActionListener, Runnable {
         setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
     }
 
+    /* Action Listener Classes*/
+
+    /**
+     * Exits system window
+     */
     class exitAction implements ActionListener{
         public void actionPerformed (ActionEvent e){
             System.exit(0);
         }
     }
 
+    //menu save
     class saveAction implements ActionListener{
         public void actionPerformed (ActionEvent e){
-            String saveFilePath;
+            String saveFilePath;//stores save path
+            //get a new file chooser at home directory
             JFileChooser jfc = new JFileChooser(FileSystemView.getFileSystemView().getHomeDirectory());
-            int returnValue = jfc.showSaveDialog(null);
-            if (returnValue == JFileChooser.APPROVE_OPTION) {
-                File selectedFile = jfc.getSelectedFile();
-                System.out.println(selectedFile.getAbsolutePath());
+            int returnValue = jfc.showSaveDialog(null);//shows graphical interface, store user save loaction
+            if (returnValue == JFileChooser.APPROVE_OPTION) {//if selected
+                File selectedFile = jfc.getSelectedFile();// get the selected file
+                //if user specified file name doesn't end with .vec (case insensitive), add it and get save path.
                 if(!selectedFile.getAbsolutePath().toLowerCase().endsWith(".vec")){
                     saveFilePath=selectedFile.getAbsolutePath()+".vec";
                 }else{
-                    saveFilePath=selectedFile.getAbsolutePath();
+                    saveFilePath=selectedFile.getAbsolutePath();//get save path
                 }
-                try (Writer writer = new BufferedWriter(new OutputStreamWriter(
+                try (Writer writer = new BufferedWriter(new OutputStreamWriter(//get a new OutputStreamWriter
+                        //write everything in the buffer to save location in ASCII format
                         new FileOutputStream(saveFilePath), StandardCharsets.US_ASCII))) {
                     writer.write(tempVEC);
-                } catch (IOException ex) {
+                } catch (IOException ex) {// catch IO exceptions
                     ex.printStackTrace();
                 }
             }
         }
     }
 
+    //menu load
     class loadAction implements ActionListener{
         public void actionPerformed (ActionEvent e){
+            //get a new file chooser at home directory
             JFileChooser jfc = new JFileChooser(FileSystemView.getFileSystemView().getHomeDirectory());
-            int returnValue = jfc.showOpenDialog(null);
-            if (returnValue == JFileChooser.APPROVE_OPTION) {
-                File selectedFile = jfc.getSelectedFile();
-                System.out.println(selectedFile.getAbsolutePath());
-                Gui.canvas.getGraphics().dispose();
-                //Load.load(selectedFile.getAbsolutePath());
+            int returnValue = jfc.showOpenDialog(null);//shows graphical interface, store user load loaction
+            if (returnValue == JFileChooser.APPROVE_OPTION) {//if selected
+                File selectedFile = jfc.getSelectedFile();// get the selected file
+                Gui.canvas.getGraphics().dispose();// clear the canvas
                 try {
-                    tempVEC=new String(Files.readAllBytes(Paths.get(selectedFile.getAbsolutePath())), StandardCharsets.US_ASCII);
-                } catch (IOException ex) {
+                    //load from file at selected location to the temp file with ASCII format
+                    tempVEC= Files.readString(Paths.get(selectedFile.getAbsolutePath()), StandardCharsets.US_ASCII);
+                } catch (IOException ex) {// catch IO exceptions
                     ex.printStackTrace();
                 }
                 canvas.repaint();
             }
         }
     }
+
+    //DELETE IF UNDO NOT IMPLEMENTED//
     class undoAction implements ActionListener{
         public void actionPerformed (ActionEvent e){
-          //implement undo
+
         }
     }
+    ////
 
+    //toggle visibility of inner windows
     class shapesToggleAction implements ActionListener{
         public void actionPerformed (ActionEvent e){
             if(shapesWindow.isVisible())shapesWindow.setVisible(false);
@@ -311,7 +373,8 @@ public class Gui extends JFrame implements ActionListener, Runnable {
                 WIDTH = screenSize.getWidth();
                 HEIGHT = screenSize.getHeight();
                 colorWindow.setVisible(true);
-                colorWindow.setLocation(getContentPane().getBounds().getSize().width-600,getContentPane().getBounds().getSize().height-250);
+                colorWindow.setLocation(getContentPane().getBounds().getSize().width-600,getContentPane()
+                        .getBounds().getSize().height-250);
             }
         }
     }
@@ -324,6 +387,9 @@ public class Gui extends JFrame implements ActionListener, Runnable {
             } else historyWindow.setVisible(true);
         }
     }
+
+    //set drawing pen shape, also disable polEndButton as that is only relevant to polygon
+    //finally reset click history in case another shape was in the middle of being drawn
     class plotAction implements ActionListener{
         public void actionPerformed (ActionEvent e){
             polEndButton.setEnabled(false);
@@ -333,6 +399,7 @@ public class Gui extends JFrame implements ActionListener, Runnable {
 
         }
     }
+
     class lineAction implements ActionListener{
         public void actionPerformed (ActionEvent e){
             polEndButton.setEnabled(false);
@@ -341,6 +408,7 @@ public class Gui extends JFrame implements ActionListener, Runnable {
             Shapes.pressedY = -1;
         }
     }
+
     class rectAction implements ActionListener{
         public void actionPerformed (ActionEvent e){
             polEndButton.setEnabled(false);
@@ -349,6 +417,7 @@ public class Gui extends JFrame implements ActionListener, Runnable {
             Shapes.pressedY = -1;
         }
     }
+
     class ellipseAction implements ActionListener{
         public void actionPerformed (ActionEvent e){
             polEndButton.setEnabled(false);
@@ -357,48 +426,67 @@ public class Gui extends JFrame implements ActionListener, Runnable {
             Shapes.pressedY = -1;
         }
     }
+
+    //set drawing pen shape to polygon, also enable polEndButton to provide the ability to end the polygon
+    //finally reset click history in case another shape was in the middle of being drawn
     class polygonAction implements ActionListener{
         public void actionPerformed (ActionEvent e){
-            selectBtn = Type.POLYGON;
+            selectBtn =Type.POLYGON;
             Shapes.pressedX = -1;
             Shapes.pressedY = -1;
             polEndButton.setEnabled(true);
         }
     }
+
+    //finish the polygon and save it to temp, update the canvas
     class polEndAction implements ActionListener{
         public void actionPerformed(ActionEvent e) {
-            System.out.print("end button pressedX"+Shapes.pressedX+"\n");
-            //if(Shapes.polX.size()>0) Shapes.polygon(Shapes.polX.get(0),Shapes.polY.get(0));
             Shapes.polygon();
             if(Shapes.readyToDraw)canvas.repaint();
-            colors.setEnabled(true);
+        }
+    }
+
+    //store the selected color in the JColorChooser in the temp file
+    class penColorAction implements ActionListener{
+        public void actionPerformed(ActionEvent e) {
+            tempVEC = tempVEC + "PEN " + "#" + Integer.toHexString(colors.getColor().getRGB()).substring(2)+"\n";
+        }
+    }
+
+    //store the selected fill color in the JColorChooser in the temp file
+    class fillColorAction implements ActionListener{
+        public void actionPerformed(ActionEvent e) {
+            tempVEC = tempVEC + "FILL " + "#" + Integer.toHexString(colors.getColor().getRGB()).substring(2)+"\n";
+        }
+    }
+
+    //insert FILL OFF command in temp to avoid filling the next shape
+    class noFillColorAction implements ActionListener{
+        public void actionPerformed(ActionEvent e) {
+            tempVEC = tempVEC + "FILL OFF\n";
         }
     }
 
     class zoomAction implements ActionListener {
         public void actionPerformed (ActionEvent e) {
-            polEndButton.setEnabled(false);
-            selectBtn = Type.ZOOM;
+            //
         }
     }
 
     class gridAction implements ActionListener {
         public void actionPerformed(ActionEvent e) {
-            if(e.getSource() == gridBtn){
-                gridWin();
-            }
+            gridWin();
         }
     }
 
     class enterAction implements ActionListener {
         public void actionPerformed(ActionEvent e) {
-            if(e.getSource() == enterBtn){
 
-            }
         }
     }
 
-
+    //Based on the selected button send the click coordinates to be processed
+    //The shape instruction will be saved to the temp file once the shape is complete
     class canvasAction extends MouseAdapter {
         @Override
         public void mouseClicked(MouseEvent e) {
@@ -413,7 +501,6 @@ public class Gui extends JFrame implements ActionListener, Runnable {
             } else if (selectBtn == Type.ELLIPSE) {
                 Shapes.saveShape(e.getX(),e.getY(),"ELLIPSE");
             } else if (selectBtn == Type.POLYGON) {
-                colors.setEnabled(false);
                 Shapes.polAdd(e.getX(), e.getY());
             }
             if(Shapes.readyToDraw)canvas.repaint();
@@ -421,17 +508,14 @@ public class Gui extends JFrame implements ActionListener, Runnable {
         }
     }
 
+    //Keep window elements at correct position (also resets position) when window is resided
     class ResizeListener extends ComponentAdapter {
         public void componentResized(ComponentEvent e) {
             historyWindow.setLocation(getContentPane().getBounds().getSize().width - 300,50);
-            colorWindow.setLocation(getContentPane().getBounds().getSize().width - 600,getContentPane().getBounds().getSize().height - 250);
+            colorWindow.setLocation(getContentPane().getBounds().getSize().width - 600,getContentPane().getBounds().getSize().height - 300);
             utilWindow.setLocation(0, getContentPane().getBounds().getSize().height - 80);
         }
     }
-
-            //Shapes.polygon();
-            //if(Shapes.readyToDraw)canvas.repaint();
-
     @Override
     public void actionPerformed(ActionEvent e) {
 
@@ -446,5 +530,3 @@ public class Gui extends JFrame implements ActionListener, Runnable {
         javax.swing.SwingUtilities.invokeLater(new Gui("Vector Design Tool"));
     }
 }
-
-
